2002-09-19  Miguel de Icaza  <miguel@ximian.com>

	* decl.cs (DeclSparce.ResolveType): Only report the type-not-found
	error if there were no errors reported during the type lookup
	process, to avoid duplicates or redundant errors.  Without this
	you would get an ambiguous errors plus a type not found.  We have
	beaten the user enough with the first error.  

	(DeclSparce.FindType): Emit a warning if we have an ambiguous
	reference. 

	* ecore.cs (SimpleName.DoResolveType): If an error is emitted
	during the resolution process, stop the lookup, this avoids
	repeated error reports (same error twice).

	* rootcontext.cs: Emit a warning if we have an ambiguous reference.

	* typemanager.cs (LookupType): Redo the type lookup code to match
	the needs of System.Reflection.  

	The issue is that System.Reflection requires references to nested
	types to begin with a "+" sign instead of a dot.  So toplevel
	types look like: "NameSpace.TopLevelClass", and nested ones look
	like "Namespace.TopLevelClass+Nested", with arbitrary nesting
	levels. 

2002-09-19  Martin Baulig  <martin@gnome.org>

	* codegen.cs (EmitContext.EmitTopBlock): If control flow analysis
	says that a method always returns or always throws an exception,
	don't report the CS0161.

	* statement.cs (FlowBranching.UsageVector.MergeChildren): Always
	set `Returns = new_returns'.

2002-09-19  Martin Baulig  <martin@gnome.org>

	* expression.cs (MemberAccess.ResolveMemberAccess): When resolving
	to an enum constant, check for a CS0176.

2002-09-18  Miguel de Icaza  <miguel@ximian.com>

	* class.cs (TypeContainer.CheckPairedOperators): Now we check
	for operators that must be in pairs and report errors.

	* ecore.cs (SimpleName.DoResolveType): During the initial type
	resolution process, when we define types recursively, we must
	check first for types in our current scope before we perform
	lookups in the enclosing scopes.

	* expression.cs (MakeByteBlob): Handle Decimal blobs.
